# lats-have-fun

./: .gitignore  README.md  flake.nix  pyproject.toml
notebooks/: lats_three_gods.ipynb  lats_three_gods_tree.json  three_gods_inference.pl
playground/: dearpygui_graph.py  playground.pl
