[project]
name = "lats-have-fun"
version = "0.1.0"
description = "implementation of language agent tree search paper"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "python-dotenv>=1.0.0",
    "numpy>=2.3.4",
    "openai>=2.6.0",
    "pyswip>=0.3.3",
    "raylib>=5.5.0.3",
    "nbqa>=1.9.1",
]

[dependency-groups]
dev = [
    "ipykernel>=7.0.1",
]
